--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,7 +66,10 @@ body,
 html {overflow-x: hidden;}
 body {
   margin: 0;
-  font-family: Open Sans;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   position: relative;
   width: 100%;
   max-width: 100%;
@@ -357,8 +360,8 @@ nav > ul > li > a:focus:before {
 }
 header .thm-btn {
   padding: 6px 12px;
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 12px;
+  font-weight:350;
   min-width: auto;
 }
 .menu-btn, 
