New Routes added

--- a/src/components/EasiestBidSection/EasiestBidSection.scss
+++ b/src/components/EasiestBidSection/EasiestBidSection.scss
@@ -1,7 +1,5 @@
-.backgroundImage {
-  background-image: url(../../images/background-1.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
+.easiest-bid-section {
+  .container {
+    max-width: 100% !important;
+  }
 }
