Projects summary Done

--- a/src/components/FourStageProcess/FourStageProcess.scss
+++ b/src/components/FourStageProcess/FourStageProcess.scss
@@ -1,5 +1,8 @@
-.four-stage-process-container{
-    .four-stage-process-label{
-        color:#e09900
-    }
+.four-stage-process-container {
+  .four-stage-process-label {
+    color: #e09900;
+  }
+  .serv-box {
+    height: 490px;
+  }
 }
