--- a/src/antd.css
+++ b/src/antd.css
@@ -110,9 +110,7 @@ body {
   margin: 0;
   color: rgba(0, 0, 0, 0.85);
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-monospace;
   font-variant: tabular-nums;
   line-height: 1.5715;
   background-color: #fff;
@@ -242,8 +240,7 @@ code,
 kbd,
 samp {
   font-size: 1em;
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
-    monospace;
+  font-family: "monospace";
 }
 pre {
   margin-top: 0;
