--- a/src/components/EasiestBidSection/EasiestBidSection.scss
+++ b/src/components/EasiestBidSection/EasiestBidSection.scss
@@ -12,11 +12,18 @@
     color: white;
   }
   .top-left {
-    position: absolute;
     top: 8px;
     left: 16px;
+    position: absolute; /* Position the background text */
+    bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+    background: rgba(151, 159, 171, 0.9); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    padding: 20px; /* Some padding */
   }
-  .mb{
+  h1 {
+    color: white !important;
+  }
+  .mb {
     margin-bottom: 1rem;
   }
 }
