--- a/src/components/ProjectDetails/ProjectDetails.scss
+++ b/src/components/ProjectDetails/ProjectDetails.scss
@@ -1,8 +1,11 @@
 .project-details-container {
   padding: 20px;
-  .content-header {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 960px;
-  }
+}
+.spin-container {
+  text-align: center;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  margin-bottom: 20px;
+  padding: 30px 50px;
+  margin: 20px 0;
 }
