--- a/src/components/SearchComponent/Search.scss
+++ b/src/components/SearchComponent/Search.scss
@@ -1,5 +1,5 @@
 .search-container {
-  padding: 20;
+  padding: 20px;
   [data-theme='compact'] .ant-advanced-search-form,
   .ant-advanced-search-form {
     padding: 24px;
@@ -18,10 +18,5 @@
     .ant-form-item-control-wrapper,
   .ant-advanced-search-form .ant-form-item-control-wrapper {
     flex: 1;
-  }
-  .bid-range-container {
-    .ant-card-body {
-      // padding-bottom: 0px !important;
-    }
   }
 }
