UI color changes

--- a/src/components/FeaturedProjects/FeaturedProjects.scss
+++ b/src/components/FeaturedProjects/FeaturedProjects.scss
@@ -33,7 +33,7 @@
   .heading {
     font-weight: bolder;
     font-size: xx-large;
-    color: #414141;
+    color: rgb(224, 153, 0);
   }
 
 
@@ -60,7 +60,7 @@
 }
 
 div {
-    display: block;
+    display: contents;
 }
 
 .grid .grid-item-inner {
