--- a/src/components/CurrentProjects/CurrentProjects.scss
+++ b/src/components/CurrentProjects/CurrentProjects.scss
@@ -6,7 +6,7 @@
     overflow: auto;
     padding: 8px 24px;
     height: 500px;
-  }
+  }  
   .demo-loading-container {
     position: absolute;
     bottom: 40px;
@@ -31,6 +31,6 @@
   .heading {
     font-weight: bolder;
     font-size: xx-large;
-    color: #414141;
+    color: rgb(224, 153, 0);
   }
 }
